[package]
name = "qemu-exit"
version = "3.0.2"
authors = ["Andre Richter <andre.o.richter@gmail.com>"]
description = "Exit QEMU with user-defined code"
homepage = "https://github.com/rust-embedded/qemu-exit"
repository = "https://github.com/rust-embedded/qemu-exit"
readme = "README.md"
keywords = ["aarch64", "x86_64", "risc-v", "qemu", "exit"]
categories = ["embedded", "hardware-support", "no-std"]
license = "MIT/Apache-2.0"
edition = "2018"
exclude = [
        ".editorconfig",
        ".gitignore",
        ".rustfmt.toml",
        ".vscode",
        "Makefile"
]

##--------------------------------------------------------------------------------------------------
## Testing
##--------------------------------------------------------------------------------------------------

[lib]
test = false

[[test]]
name = "exit_13"
harness = false
